--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/webp" href="/favicon.webp" />
+  <meta name="description" content="האתר הרשמי של ישיבת בוגרי הצבא ברעננה" />
+  <meta name="robots" content="index, follow" />
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>בית המדרש לבוגרי צבא רעננה</title>
+  <title>בית המדרש לבוגרי צבא רעננה | בוגרצ רעננה</title>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "EducationalOrganization",
+  "name": "ישיבת בוגרי צבא רעננה",  
+  "alternateName": "בוגרצ רעננה",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "רעננה",
+    "addressCountry": "IL"
+  },
+  "url": "https://bogratz-raanana.github.io/web"
+}
+</script>
 </head>
 
 <body>
