--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/webp" href="/favicon.webp" />
+  <link rel="icon" type="image/webp" href="./favicon.webp" />
   <meta name="description" content="האתר הרשמי של ישיבת בוגרי הצבא ברעננה" />
   <meta name="robots" content="index, follow" />
   <meta charset="UTF-8" />
