--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="he" dir="rtl">
 
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/webp" href="/favicon.webp" />
-  <meta name="description" content="האתר הרשמי של ישיבת בוגרי הצבא ברעננה" />
-  <meta name="robots" content="index, follow" />
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>בית המדרש לבוגרי צבא רעננה | בוגרצ רעננה</title>
-  <script type="application/ld+json">
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/webp" href="/favicon.webp" />
+    <meta name="description" content="האתר הרשמי של ישיבת בוגרי הצבא ברעננה" />
+    <meta name="robots" content="index, follow" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>בית המדרש לבוגרי צבא רעננה | בוגרצ רעננה</title>
+    <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "EducationalOrganization",
@@ -20,14 +20,14 @@
     "addressLocality": "רעננה",
     "addressCountry": "IL"
   },
-  "url": "https://bogratz-raanana.github.io/web"
+  "url": "https://bogratz-raanana.netlify.app/"
 }
 </script>
 </head>
 
 <body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
 </body>
 
 </html>
