added google verification

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="he" dir="rtl">
 
 <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/webp" href="/favicon.webp" />
-    <meta name="description" content="האתר הרשמי של ישיבת בוגרי הצבא ברעננה" />
-    <meta name="robots" content="index, follow" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>בית המדרש לבוגרי צבא רעננה | בוגרצ רעננה</title>
-    <script type="application/ld+json">
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/webp" href="/favicon.webp" />
+  <meta name="description" content="האתר הרשמי של ישיבת בוגרי הצבא ברעננה" />
+  <meta name="robots" content="index, follow" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="j2gC_hRSk-Ryk9e6UsBJLXYh9z5frvpHtPIKSB9nicY" />
+  <title>בית המדרש לבוגרי צבא רעננה | בוגרצ רעננה</title>
+  <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "EducationalOrganization",
@@ -26,8 +27,8 @@
 </head>
 
 <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
 </body>
 
 </html>
