--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <link rel="icon" type="image/webp" href="/favicon.webp" />
   <meta name="description" content="האתר הרשמי של ישיבת בוגרי הצבא ברעננה" />
   <meta name="robots" content="index, follow" />
-  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="j2gC_hRSk-Ryk9e6UsBJLXYh9z5frvpHtPIKSB9nicY" />
+  <meta name="google-site-verification" content="063bD2moej-TJ9JLMBoRejhPpvsmsiYAvna37DFBSCM" />
   <title>בית המדרש לבוגרי צבא רעננה | בוגרצ רעננה</title>
   <script type="application/ld+json">
 {
