move to new domain

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="האתר הרשמי של ישיבת בוגרי הצבא ברעננה" />
   <meta name="robots" content="index, follow" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="canonical" href="https://bogratz-raanana.co.il/" />
   <meta name="google-site-verification" content="j2gC_hRSk-Ryk9e6UsBJLXYh9z5frvpHtPIKSB9nicY" />
   <meta name="google-site-verification" content="063bD2moej-TJ9JLMBoRejhPpvsmsiYAvna37DFBSCM" />
   <title>בית המדרש לבוגרי צבא רעננה | בוגרצ רעננה</title>
@@ -21,7 +22,7 @@
     "addressLocality": "רעננה",
     "addressCountry": "IL"
   },
-  "url": "https://bogratz-raanana.netlify.app/"
+  "url": "https://bogratz-raanana.co.il/"
 }
 </script>
 </head>
